# mcpSyncGui

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: download-binaries.sh  release.sh
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  rulesync.jsonc  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Config.tsx  Dashboard.tsx  Fetch.tsx  Generate.tsx  Import.tsx  Layout.tsx  OutputLog.tsx  RulesEditor.tsx  Welcome.tsx
src/lib/: tauri.ts
src/store/: useAppStore.ts
